fixe l'alignement des vidéo

--- a/assets/scss/base/_content.scss
+++ b/assets/scss/base/_content.scss
@@ -428,9 +428,7 @@ td code {
         padding-bottom: 56.25%;
 
         iframe {
-            position:absolute;
             width: 100%;
-            height: 100%;
         }
     }
 }
